@@ -1,0 +1,65 @@
+#
+# $Id$
+# Copyright 2010 Inter7 Internet Technologies, Inc.
+#
+# This file defines password strength requirements
+# Strength is defined by various character set, character ratio,
+# and length requirements.
+# 
+# If no policy is defined, password strength will not be enforced.
+#
+# Settings:
+#   Alphabet       Any alphabet character, whether uppercase or lowercase [A-Za-z]
+#   UpperLower     The ratio of uppercase to lowercase characters
+#   Numeric        Numerical characters [0-9]
+#   Other          Any character other than Alphabet or Numeric
+#   Length         Total length of the password
+#
+# Note that you may define a set length, but it is not required.  Setting
+# requirements on character sets also adds to the required length.  For instance,
+# if you require alphabet characters, at least some uppercase and lowercase characters,
+# at least some numeric, and some punctuation, the password length cannot be less than
+# four characters.
+#
+# Making the ratios higher will require yet more of each character set.
+#
+# <inter7.com>
+#
+
+#
+# Require very strong passwords
+#
+
+# Policy = Passwords must contain upper and lowercase characters, numbers, punctuation, and be at least eight characters in length
+# Alphabet < 0.84
+# UpperLower < 0.51 
+# Numeric > 0.08
+# Other >= 0.04
+# Length > 7
+
+#
+# Require strong passwords
+#
+
+# Policy = Passwords must contain upper and lowercase characters, numbers, and be at least six characters in length
+# Alphabet > 0.4
+# UpperLower < 0.6
+# Numeric >= 0.20
+# Length > 6
+
+#
+# Require weak passwords
+#
+
+# Policy = Passwords must be alphanumeric, and be at least six characters in length
+# Alphabet > 0.4
+# Numeric > 0.01
+# Length > 5
+
+#
+# Require numeric-only passwords of at least 5 characters
+#
+
+# Policy = Passwords must be numerical only, and be at least five characters
+# Numeric = 1.00
+# Length > 4
